Fix Horizontal Scroll Issue

--- a/src/blog/css/blog.css
+++ b/src/blog/css/blog.css
@@ -87,4 +87,7 @@ body {
 	html {
 		font-size: 16px;
 	}
+	.no-negetive-right-margin {
+		margin-right: 0;
+	}
 }
